# db_gibdd

./: check_db.sql  drivers_script.sql  for_db.sql  information_script.sql  manufacturers_script.sql  witnesses_script.sql
connect_with_qt/: CMakeLists.txt  database_view.cpp  database_view.h  database_view.ui  db_interaction.cpp  db_interaction.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  reports.cpp  reports.h  reports.ui  requests.cpp  requests.h  requests.ui  utils.h
requests/: 1_request.sql  2_request.sql  3_request.sql  4_request.sql  5_request.sql  report_1.sql  report_2.sql
ruby files/: create_gibdd_script.rb  create_offenses_script.rb  create_penalty_script.rb  create_personal_script.rb  create_witnesses_script.rb
ruby_files/: create_drivers_script.rb  create_information_script.rb  create_insurance_script.rb  create_manufacturers_script.rb  create_transport_script.rb
sql_code/: for_reload_db.sql  gibdd_script.sql  insurance_script.sql  offenses_script.sql  penalty_script.sql
